# swell

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/swell-analyzer/: Cargo.toml
crates/swell-analyzer/src/: analyzed.rs  ast_classify.rs  build.rs  catalog.rs  checks.rs  comment_hints.rs  describe.rs  explain_expr.rs  fk_join.rs  json_shape.rs  lib.rs  lowering.rs  nullability.rs  overrides.rs  param_nullability.rs  pg_util.rs  plan.rs  query.rs  scope.rs  ts_types.rs
crates/swell-analyzer/tests/: integration.rs  property_tests.rs  saas_billing.rs  sqlc_corpus.rs
crates/swell-analyzer/tests/sqlc/enum_ordering/: query.sql  schema.sql
crates/swell-cli/: Cargo.toml
crates/swell-cli/src/: cache.rs  commands.rs  config.rs  main.rs
crates/swell-codegen/: Cargo.toml
crates/swell-codegen/src/: lib.rs
crates/swell-codegen/tests/: corpus.rs
crates/swell-codegen/tests/corpus/: README.md  _schemas.txt  analyzer.md  analyzer.setup.sql  billing.md  cast_policy.md
crates/swell-codegen/tests/corpus/analyzer/: cast_column_has_no_table_ref.md  coalesce_with_literal_is_not_nullable.md  count_aggregate_is_bigint.md  count_star_has_no_table_ref.md  count_star_is_not_nullable.md  custom_composite_type_renders_as_object.md  custom_domain_renders_as_base_type.md  custom_enum_renders_as_string_union.md  enum_column.md  enum_inside_jsonb_build_object.md  inner_join_preserves_not_null.md  insert_values_param_carries_table_ref.md  insert_values_param_to_not_null_column_is_not_nullable.md  insert_values_param_to_nullable_column_stays_nullable.md  insert_values_wrapped_in_coalesce_stays_nullable.md  json_build_object_nested.md  jsonb_agg_with_jsonb_build_object.md  jsonb_build_object_simple.md  jsonb_build_object_with_dynamic_key.md  jsonb_column_is_unknown_until_m7.md  left_join_makes_rhs_nullable.md  nullable_base_column.md  override_force_not_null.md  override_force_nullable.md  override_type.md  override_type_and_not_null.md  scalar_select_with_param.md  select_column_carries_table_ref.md  select_where_param_stays_nullable.md  sum_is_nullable.md  timestamp_and_uuid_arrays.md  to_jsonb_table_alias_enumerates_columns.md  update_set_param_to_not_null_column_is_not_nullable.md  where_param_has_no_table_ref.md
crates/swell-codegen/tests/corpus/billing/: _setup.sql  array_agg_with_order_by.md  array_of_enum_renders_as_paren_union.md  boolean_function_call.md  calling_custom_scalar_function.md  case_with_else_keeps_unknown.md  coalesce_with_literal_fallback.md  composite_postal_address_renders_as_object.md  count_and_sum_classification.md  cross_join_does_not_introduce_nulls.md  cross_join_lateral_unnest_array.md  delete_returning.md  derived_table_in_from.md  distinct_on_keeps_attnotnull.md  domain_money_cents_renders_as_string.md  enum_column_rendered_as_union.md  except_all.md  exists_subquery_in_where_doesnt_change_select_types.md  explicit_cast.md  filter_clause_on_count.md  force_not_null_on_join_with_filter.md  full_outer_join_makes_both_sides_nullable.md  generated_identity_is_not_null.md  generated_stored_column_is_nullable_when_expr_can_be.md  group_by_having.md  grouping_sets_make_keys_nullable.md  insert_into_table_with_identity_does_not_require_id_param.md  insert_on_conflict_do_nothing_returning.md  insert_on_conflict_returning.md  insert_returning_with_defaults.md  insert_select_returning.md  intersect_two_selects.md  json_shape_aggregate_with_group_by.md  json_shape_dynamic_key_collapses_to_record.md  json_shape_with_aliases_and_join.md  jsonb_arrow_operators.md  jsonb_containment_returns_boolean.md  jsonb_object_agg_emits_record.md  lag_lead_returns_nullable.md  left_join_lateral_subquery_makes_columns_nullable.md  (+28 more)
crates/swell-scanner/: Cargo.toml
crates/swell-scanner/src/: lib.rs  visit.rs
crates/swell-scanner/tests/: scan.rs
examples/basic/: package.json  swell.toml  tsconfig.json
examples/basic/migrations/: 0001_init.sql
examples/basic/src/: _typing-check.ts  db.ts  index.ts  swell.generated.ts
scripts/: dev-pg.sh
