[workspace]
resolver = "2"
# Members are added as each crate lands — see the per-crate PRs.
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dialohq/swell"
rust-version = "1.90"

[workspace.dependencies]
# Internal
swell-analyzer = { path = "crates/swell-analyzer" }
swell-scanner  = { path = "crates/swell-scanner" }
swell-codegen  = { path = "crates/swell-codegen" }

# Postgres
pg_query        = "6"
tokio-postgres  = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types  = "0.2"

# TS source scanning. We pull `swc_core` rather than individual `swc_*`
# crates because their internal versions are tightly coupled.
swc_core = { version = "53", features = ["ecma_parser", "ecma_parser_typescript", "ecma_ast", "ecma_visit", "common", "common_sourcemap"] }

# Async + error
tokio           = { version = "1", features = ["full"] }
anyhow          = "1"
thiserror       = "2"

# Config + serde
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"

# Filesystem + watching + hashing
notify          = "7"
notify-debouncer-full = "0.4"
sha2            = "0.10"
hex             = "0.4"
globset         = "0.4"
walkdir         = "2"

# CLI
clap            = { version = "4", features = ["derive"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
