[package]
name = "swell-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "swell"
path = "src/main.rs"

[dependencies]
swell-analyzer = { workspace = true }
swell-scanner = { workspace = true }
swell-codegen = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
