[package]
name = "swell-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
swell-analyzer = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }
similar = "2.6"
pulldown-cmark = { version = "0.13", default-features = false }
