[package]
name = "swell-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
swc_core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
